<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_1"
                    android:id="@+id/button"
                    android:textSize="16sp"
                    android:layout_weight="10"
                    android:onClick="onAnimationImage1"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_2"
                    android:id="@+id/button2"
                    android:textSize="16sp"
                    android:layout_weight="10"
                    android:onClick="onAnimationImage2" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_3"
                    android:id="@+id/button3"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage3" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_4"
                    android:id="@+id/button4"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage4" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_5"
                    android:id="@+id/button5"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage5" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_6"
                    android:id="@+id/button6"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage6" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_7"
                    android:id="@+id/button7"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage7" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_8"
                    android:id="@+id/button8"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage8" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_9"
                    android:id="@+id/button9"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage9" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_10"
                    android:id="@+id/button10"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage10" />
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_11"
                    android:id="@+id/button11"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage11" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_name_12"
                    android:id="@+id/button12"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:onClick="onAnimationImage12" />
        </TableRow>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/MyRadioGroup"
                android:checkedButton="@+id/radioButton1"
                android:gravity="center">
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton1"
                    android:id="@+id/radioButton1"
                    android:onClick="onRadioButtonClicked"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton2"
                    android:id="@+id/radioButton2"
                    android:onClick="onRadioButtonClicked"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton3"
                    android:id="@+id/radioButton3"
                    android:onClick="onRadioButtonClicked"/>
            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton4"
                    android:id="@+id/radioButton4"
                    android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/android_green_img"
                android:contentDescription="@string/ImageView"/>
    </TableLayout>

    <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="#ef0000"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/signature" />

</RelativeLayout>


